Fix dashboard